Authentication working. HttpMessage class set up.

--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -106,6 +106,10 @@ dataSource:
 
 environments:
     development:
+        plugin:
+         cors:
+            enabled: true
+
         dataSource:
             dbCreate: create-drop
             url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
