--- a/cloudwebapp/build.gradle
+++ b/cloudwebapp/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-logging"
     implementation "org.springframework.boot:spring-boot-starter-validation"
     implementation "org.springframework.boot:spring-boot-autoconfigure"
+    implementation "org.grails.plugins:spring-security-core:4.0.3"
     implementation "org.grails:grails-core"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
     implementation "org.springframework.boot:spring-boot-starter-tomcat"
