--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -86,11 +86,9 @@ grails:
                 scriptlet: html
                 taglib: none
                 staticparts: none
-management:
-    endpoints:
-        jmx:
-            unique-names: true
-
+spring:
+    jmx:
+        unique-names: true
 ---
 hibernate:
     cache:
@@ -113,6 +111,19 @@ environments:
         dataSource:
             dbCreate: create-drop
             url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+
+        cloud:
+            username: admin
+            password: P0larC@mper
+            trustStorePath: ../xtrn-files-and-config/cacert.jks
+            keyStorePath: ../xtrn-files-and-config/cloud.jks
+            keyStorePassword: B0331e
+            trustStorePassword: B0331e
+            cloudHost: localhost
+            cloudPort: 8081
+            webServerHost: localhost
+            webServerPort: 8088
+
     test:
         dataSource:
             dbCreate: update
