--- a/xtrn-files-and-config/nginx.conf
+++ b/xtrn-files-and-config/nginx.conf
@@ -47,92 +47,112 @@ http {
        
         # For NVR application controller
         location /application/ {
-               auth_request /auth;
-               auth_request_set $auth_status $upstream_status;
-               error_page 500 =401 /error/401;
                proxy_redirect http://localhost:8083/application https://$http_host;
                proxy_pass http://localhost:8083/application/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
         }
 
         # For NVR assets
         location /assets/ {
-               auth_request /auth;
-               auth_request_set $auth_status $upstream_status;
-               error_page 500 =401 /error/401;
                proxy_redirect http://localhost:8083/assets https://$http_host;
                proxy_pass http://localhost:8083/assets/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
         }
 
         # For NVR cam controller
         location /cam/ {
-               auth_request /auth;
-               auth_request_set $auth_status $upstream_status;
-               error_page 500 =401 /error/401;
                proxy_redirect http://localhost:8083/cam https://$http_host;
                proxy_pass http://localhost:8083/cam/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
         }
 
         # For NVR motion controller
         location /motion/ {
-               auth_request /auth;
-               auth_request_set $auth_status $upstream_status;
-               error_page 500 =401 /error/401;
                proxy_redirect http://localhost:8083/motion https://$http_host;
                proxy_pass http://localhost:8083/motion/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
         }
-        
+
         # For NVR onvif controller
         location /onvif/ {
-               auth_request /auth;
-               auth_request_set $auth_status $upstream_status;
-               error_page 500 =401 /error/401;
                proxy_redirect http://localhost:8083/onvif https://$http_host;
                proxy_pass http://localhost:8083/onvif/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
         }
 
         # For NVR user controller
         location /user/ {
-               auth_request /auth;
-               auth_request_set $auth_status $upstream_status;
-               error_page 500 =401 /error/401;
                proxy_redirect http://localhost:8083/user https://$http_host;
                proxy_pass http://localhost:8083/user/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
         }
 
         # For NVR utils controller
         location /utils/ {
-               auth_request /auth;
-               auth_request_set $auth_status $upstream_status;
-               error_page 500 =401 /error/401;
                proxy_redirect http://localhost:8083/utils https://$http_host;
                proxy_pass http://localhost:8083/utils/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
         }
 
         # For NVR recordings
         location /recording/ {
-               auth_request /auth;
-               auth_request_set $auth_status $upstream_status;
-               error_page 500 =401 /error/401;
                proxy_redirect http://localhost:8083/recording https://$http_host;
                proxy_pass http://localhost:8083/recording/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
         }
-        
+
         # For NVR live streams
         location /live/ {
-               auth_request /auth;
-               auth_request_set $auth_status $upstream_status;
-               error_page 500 =401 /error/401;
                proxy_redirect http://localhost:8083/live https://$http_host;
                proxy_pass http://localhost:8083/live/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
         }
 
         # For NVR drawdown calculator
         location /dc/ {
-               auth_request /auth;
-               auth_request_set $auth_status $upstream_status;
-               error_page 500 =401 /error/401;
                proxy_redirect http://localhost:8083/dc https://$http_host;
                proxy_pass http://localhost:8083/dc/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
         }
 
         # For tomcat manager (return error on attempted public access)
@@ -140,12 +160,12 @@ http {
             return 401;
         }
 
-        location = /auth {
-                proxy_set_header Authorization "";
-                proxy_pass http://localhost:8080/cloud/getTemperature;
-                proxy_pass_request_body off;
-                proxy_set_header Content-Length "";
-        }
+#         location = /auth {
+#                 proxy_set_header Authorization "";
+#                 proxy_pass http://localhost:8080/cloud/getTemperature;
+#                 proxy_pass_request_body off;
+#                 proxy_set_header Content-Length "";
+#         }
 
         location /error/401 {
             return 401;
