--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -108,9 +108,15 @@ dataSource:
 
 environments:
     development:
-        plugin:
-         cors:
-            enabled: true
+        grails:
+            plugin:
+                springsecurity:
+                    active: true
+                    auth:
+                        loginFormUrl: /login/denied
+
+            cors:
+                enabled: true
 
         dataSource:
             dbCreate: create-drop
@@ -134,6 +140,11 @@ environments:
             dbCreate: update
             url: jdbc:h2:mem:testDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     production:
+        grails:
+            plugin:
+                springsecurity:
+                    active: true
+
         cloud:
             username: admin
             password: P0larC@mper
