--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -128,12 +128,10 @@ environments:
             trustStorePath: ../xtrn-files-and-config/cacert.jks
             keyStorePath: ../xtrn-files-and-config/cloud.jks
             keyStorePassword: B0331e
-            privateKeyPath: /etc/cloud/privateKey
+            privateKeyPath: ../xtrn-files-and-config/privateKey
             trustStorePassword: B0331e
-            cloudHost: localhost
-            cloudPort: 8081
-            webServerHost: localhost
-            webServerPort: 8088
+            cloudProxyFacingPort: 8081
+            browserFacingPort: 8083
 
     test:
         dataSource:
@@ -151,11 +149,10 @@ environments:
             trustStorePath: /etc/cloud/cacert.jks
             keyStorePath: /etc/cloud/cloud.jks
             keyStorePassword: B0331e
+            privateKeyPath: /etc/cloud/privateKey
             trustStorePassword: B0331e
-            cloudHost: localhost
-            cloudPort: 8081
-            webServerHost: localhost
-            webServerPort: 8088
+            cloudProxyFacingPort: 8081
+            browserFacingPort: 8083
 
         dataSource:
             dbCreate: update
