--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -123,8 +123,8 @@ environments:
             url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
 
         cloud:
-            username: admin
-            password: elementary
+            username: cloud
+            password: "DrN3yuFAtSsK2w7AtTf66FFRVveBwtjU"
             trustStorePath: ../xtrn-files-and-config/cacert.jks
             keyStorePath: ../xtrn-files-and-config/cloud.jks
             keyStorePassword: B0331e
@@ -144,8 +144,8 @@ environments:
                     active: true
 
         cloud:
-            username: admin
-            password: P0larC@mper
+            username: cloud
+            password: "DrN3yuFAtSsK2w7AtTf66FFRVveBwtjU"
             trustStorePath: /etc/cloud/cacert.jks
             keyStorePath: /etc/cloud/cloud.jks
             keyStorePassword: B0331e
