--- a/cloudwebapp/build.gradle
+++ b/cloudwebapp/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     testImplementation "org.seleniumhq.selenium:selenium-support:3.141.59"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-chrome-driver:3.141.59"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-firefox-driver:3.141.59"
+    implementation 'com.bertramlabs.plugins:i18n-asset-pipeline-grails:3.3.6'
 }
 
 task prepareKotlinBuildScriptModel {
