--- a/xtrn-files-and-config/nginx.conf
+++ b/xtrn-files-and-config/nginx.conf
@@ -155,6 +155,17 @@ http {
                proxy_read_timeout 300s;
         }
 
+        # For cloudProxy control
+        location /cloudProxy/ {
+               proxy_redirect http://localhost:8083/live https://$http_host;
+               proxy_pass http://localhost:8083/cloudProxy/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
+        }
+
         # For NVR drawdown calculator
         location /dc/ {
                proxy_redirect http://localhost:8083/dc https://$http_host;
