--- a/cloudwebapp/gradle.properties
+++ b/cloudwebapp/gradle.properties
@@ -1,6 +1,7 @@
-grailsVersion=5.0.1
-grailsGradlePluginVersion=5.0.0
-groovyVersion=3.0.7
+grailsVersion=5.2.1
+logback.version=1.2.7
+grailsGradlePluginVersion=5.2.1
+groovyVersion=3.0.11
 gorm.version=7.1.0
 org.gradle.daemon=true
 org.gradle.parallel=true
