--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -132,6 +132,7 @@ environments:
       trustStorePassword: B0331e
       cloudProxyFacingPort: 8081
       browserFacingPort: 8083
+      logLevel: DEBUG
 
       mail:
         smtp:
@@ -170,6 +171,8 @@ environments:
       trustStorePassword: B0331e
       cloudProxyFacingPort: 8081
       browserFacingPort: 8083
+      logLevel: DEBUG
+
       #            smtp server details for sending reset password links
       mail:
         smtp:
