--- a/cloudFrontEnd/angular.json
+++ b/cloudFrontEnd/angular.json
@@ -43,7 +43,8 @@
                          "./node_modules/moment/min/moment.min.js",
                         "./node_modules/file-saver/dist/FileSaver.min.js",
                         "./node_modules/sockjs-client/dist/sockjs.min.js",
-                        "./node_modules/stompjs/lib/stomp.min.js"
+                        "./node_modules/stompjs/lib/stomp.min.js",
+                        "./node_modules/object-hash/dist/object_hash.js"
             ],
             "vendorChunk": true,
             "extractLicenses": false,
