--- a/cloudFrontEnd/package.json
+++ b/cloudFrontEnd/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
-    "@stomp/rx-stomp": "^1.1.4",
+    "@stomp/stompjs": "^7.0.0",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
     "hls.js": "^1.0.7",
