--- a/xtrn-files-and-config/nginx.conf
+++ b/xtrn-files-and-config/nginx.conf
@@ -146,7 +146,7 @@ http {
 
         # For Wi-Fi admin utilities
         location /wifiUtils/ {
-               proxy_redirect http://localhost:8083/live https://$http_host;
+               proxy_redirect http://localhost:8083/wifiUtils https://$http_host;
                proxy_pass http://localhost:8083/wifiUtils/;
                proxy_http_version 1.1;
                proxy_set_header Upgrade $http_upgrade;
@@ -157,8 +157,30 @@ http {
 
         # For cloudProxy control
         location /cloudProxy/ {
-               proxy_redirect http://localhost:8083/live https://$http_host;
+               proxy_redirect http://localhost:8083/cloudProxy https://$http_host;
                proxy_pass http://localhost:8083/cloudProxy/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
+        }
+
+        # For audio backchannel
+        location /audio/ {
+               proxy_redirect http://localhost:8083/audio https://$http_host;
+               proxy_pass http://localhost:8083/audio/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
+        }
+
+        # For audio backchannel enable/disable across clients
+        location /stomp/ {
+               proxy_redirect http://localhost:8083/stomp https://$http_host;
+               proxy_pass http://localhost:8083/stomp/;
                proxy_http_version 1.1;
                proxy_set_header Upgrade $http_upgrade;
                proxy_set_header Connection $connection_upgrade;
