Fix bug with tomcat not being able to write to /var/cloud

--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -137,8 +137,8 @@ environments:
       mail:
         smtp:
           auth: true
-          username: rdaustin@virginmedia.com
-          password: DC10plus
+          username: nousernamed@virginmedia.com
+          password: nopassword
           starttls:
             enable: true
           ssl:
