--- a/xtrn-files-and-config/nginx.conf
+++ b/xtrn-files-and-config/nginx.conf
@@ -167,9 +167,33 @@ http {
         }
 
         # For audio backchannel
-        location /audio/ {
-               proxy_redirect http://localhost:8083/audio https://$http_host;
-               proxy_pass http://localhost:8083/audio/;
+        location /audio {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Proxy "";
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://localhost:8083;
+        }
+
+        # Start the audio backchannel
+        location /startAudioOut/ {
+               proxy_redirect http://localhost:8083/startAudioOut https://$http_host;
+               proxy_pass http://localhost:8083/startAudioOut/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
+        }
+
+        # Stop the audio backchannel
+        location /stopAudioOut/ {
+               proxy_redirect http://localhost:8083/stopAudioOut https://$http_host;
+               proxy_pass http://localhost:8083/stopAudioOut/;
                proxy_http_version 1.1;
                proxy_set_header Upgrade $http_upgrade;
                proxy_set_header Connection $connection_upgrade;
@@ -178,9 +202,22 @@ http {
         }
 
         # For audio backchannel enable/disable across clients
-        location /stomp/ {
-               proxy_redirect http://localhost:8083/stomp https://$http_host;
-               proxy_pass http://localhost:8083/stomp/;
+        location /stomp {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Proxy "";
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://localhost:8083;
+        }
+
+        # For live video websocket
+        location /ws/ {
+               proxy_redirect http://localhost:8083/ws https://$http_host;
+               proxy_pass http://localhost:8083/ws/;
                proxy_http_version 1.1;
                proxy_set_header Upgrade $http_upgrade;
                proxy_set_header Connection $connection_upgrade;
