Enable ptz path in nginx.conf

--- a/xtrn-files-and-config/nginx.conf
+++ b/xtrn-files-and-config/nginx.conf
@@ -133,10 +133,10 @@ http {
                proxy_read_timeout 300s;
         }
 
-        # For NVR live streams
-        location /live/ {
-               proxy_redirect http://localhost:8083/live https://$http_host;
-               proxy_pass http://localhost:8083/live/;
+        # For NPTZ controller
+        location /ptz/ {
+               proxy_redirect http://localhost:8083/ptz https://$http_host;
+               proxy_pass http://localhost:8083/ptz/;
                proxy_http_version 1.1;
                proxy_set_header Upgrade $http_upgrade;
                proxy_set_header Connection $connection_upgrade;
