Added Admin Functions as on NVR to client mode.

--- a/xtrn-files-and-config/nginx.conf
+++ b/xtrn-files-and-config/nginx.conf
@@ -236,6 +236,16 @@ http {
                proxy_read_timeout 300s;
         }
 
+        # For NVR Admin Functions
+        location /cua/ {
+               proxy_redirect http://localhost:8083/cua https://$http_host;
+               proxy_pass http://localhost:8083/cua/;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
+        }
         # For tomcat manager (return error on attempted public access)
         location /manager/ {
             return 401;
