Relocate logs to /var/log/cloud.

--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -161,7 +161,7 @@ environments:
       trustStorePassword: B0331e
       cloudProxyFacingPort: 8081
       browserFacingPort: 8083
-      logLevel: DEBUG
+      logLevel: INFO
 
       #            smtp server details for sending reset password links
       mail:
