--- a/cloudwebapp/build.gradle
+++ b/cloudwebapp/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         classpath "org.grails.plugins:hibernate5:7.0.4"
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.0"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.3.6"
-        classpath 'org.grails.plugins:quartz:2.0.13' // Needed to compile *Job classes
+ //       classpath 'org.grails.plugins:quartz:2.0.13' // Needed to compile *Job classes
     }
 }
 
@@ -88,8 +88,8 @@ dependencies {
 
     testRuntimeOnly "org.seleniumhq.selenium:selenium-chrome-driver:3.141.59"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-firefox-driver:3.141.59"
-    implementation 'org.quartz-scheduler:quartz' // Is not pulled in by default
-    implementation 'org.grails.plugins:quartz:2.0.13' // Needed to compile *Job classes
+//    implementation 'org.quartz-scheduler:quartz' // Is not pulled in by default
+//    implementation 'org.grails.plugins:quartz:2.0.13' // Needed to compile *Job classes
     implementation 'com.bertramlabs.plugins:i18n-asset-pipeline-grails:3.3.6'
     implementation 'javax.mail:mail:1.4.7'
 }
