--- a/cloudFrontEnd/package.json
+++ b/cloudFrontEnd/package.json
@@ -25,7 +25,7 @@
     "@stomp/stompjs": "^7.0.0",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
-    "hls.js": "^1.0.7",
+    "hls.js": "<=1.4.12",
     "moment": "^2.29.1",
     "mpegts.js": "^1.6.7",
     "object-hash": "^3.0.0",
