--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -122,16 +122,12 @@ environments:
       dbCreate: update
       url: jdbc:h2:/var/cloud/db/prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
 
+    appHomeDirectory: /etc/cloud
+
     cloud:
       username: cloud
       password: "DrN3yuFAtSsK2w7AtTf66FFRVveBwtjU"
-      mqURL: failover://ssl://192.168.1.82:61617?socket.verifyHostName=false
-      mqTrustStorePath: ../xtrn-files-and-config/client.ts
-      mqKeyStorePath: ../xtrn-files-and-config/client.ks
-      mqKeyStorePassword: ExPEThINdAvAmpROteRCLEyfI
-      mqTrustStorePassword: CIdERVERiMPLetORThrONVAce
-      mqUser: cloud
-      mqPassword: inelESOLsiONgeOuShEFatIns
+      mqURL: failover://ssl://192.168.1.83:61617?socket.verifyHostName=false
       privateKeyPath: ../xtrn-files-and-config/privateKey
       browserFacingPort: 8083
       logLevel: DEBUG
@@ -153,16 +149,12 @@ environments:
         springsecurity:
           active: true
 
+    appHomeDirectory: /etc/cloud
+
     cloud:
       username: cloud
       password: "DrN3yuFAtSsK2w7AtTf66FFRVveBwtjU"
-      mqURL: failover://ssl://192.168.1.82:61617?socket.verifyHostName=false
-      mqTrustStorePath: /etc/cloud/client.ts
-      mqKeyStorePath: /etc/cloud/client.ks
-      mqKeyStorePassword: ExPEThINdAvAmpROteRCLEyfI
-      mqTrustStorePassword: CIdERVERiMPLetORThrONVAce
-      mqUser: cloud
-      mqPassword: inelESOLsiONgeOuShEFatIns
+      mqURL: failover://ssl://192.168.1.83:61617?socket.verifyHostName=false
       privateKeyPath: /etc/cloud/privateKey
       browserFacingPort: 8083
       logLevel: DEBUG
