* Restore truststore parameters for future use as the ActiveMQ installer creates a trust store for if we wish to use it.

--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -127,6 +127,11 @@ environments:
     cloud:
       username: cloud
       password: "DrN3yuFAtSsK2w7AtTf66FFRVveBwtjU"
+      mqTrustStorePath: /etc/cloud/client.ts
+      mqKeyStorePath: /etc/cloud/client.ks
+      mqKeyStorePassword: ExPEThINdAvAmpROteRCLEyfI
+      mqUser: cloud
+      mqPassword: inelESOLsiONgeOuShEFatIns
       mqURL: failover://ssl://192.168.1.83:61617?socket.verifyHostName=false
       privateKeyPath: ../xtrn-files-and-config/privateKey
       browserFacingPort: 8083
@@ -154,6 +159,11 @@ environments:
     cloud:
       username: cloud
       password: "DrN3yuFAtSsK2w7AtTf66FFRVveBwtjU"
+      mqTrustStorePath: /etc/cloud/client.ts
+      mqKeyStorePath: /etc/cloud/client.ks
+      mqKeyStorePassword: ExPEThINdAvAmpROteRCLEyfI
+      mqUser: cloud
+      mqPassword: inelESOLsiONgeOuShEFatIns
       mqURL: failover://ssl://192.168.1.83:61617?socket.verifyHostName=false
       privateKeyPath: /etc/cloud/privateKey
       browserFacingPort: 8083
