--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -120,16 +120,13 @@ environments:
 
     dataSource:
       dbCreate: update
-      url: jdbc:h2:/var/cloud/db/prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+      url: jdbc:h2:/var/cloud-server/db/prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
 
-    appHomeDirectory: /etc/cloud
+    appHomeDirectory: /etc/cloud-server
+    varHomeDirectory: /var/cloud-server
 
     cloud:
-      username: cloud
-      password: "DrN3yuFAtSsK2w7AtTf66FFRVveBwtjU"
-      mqTrustStorePath: /etc/cloud/client.ts
-      mqKeyStorePath: /etc/cloud/client.ks
-      mqKeyStorePassword: ExPEThINdAvAmpROteRCLEyfI
+      mqTrustStorePath: /etc/cloud-server/client.ts
       mqUser: cloud
       mqPassword: inelESOLsiONgeOuShEFatIns
       mqURL: failover://ssl://192.168.1.83:61617?socket.verifyHostName=false
@@ -139,7 +136,7 @@ environments:
 
       mail:
         smtp:
-          configFile: /var/cloud/smtp.json
+          configFile: /var/cloud-server/smtp.json
 
       quartz:
       autoStartup: false
@@ -154,32 +151,29 @@ environments:
         springsecurity:
           active: true
 
-    appHomeDirectory: /etc/cloud
+    appHomeDirectory: /etc/cloud-server
+    varHomeDirectory: /var/cloud-server
 
     cloud:
       username: cloud
       password: "DrN3yuFAtSsK2w7AtTf66FFRVveBwtjU"
-      mqTrustStorePath: /etc/cloud/client.ts
-      mqKeyStorePath: /etc/cloud/client.ks
-      mqKeyStorePassword: ExPEThINdAvAmpROteRCLEyfI
-      mqUser: cloud
-      mqPassword: inelESOLsiONgeOuShEFatIns
+      mqTrustStorePath: /etc/cloud-server/client.ts
       mqURL: failover://ssl://192.168.1.83:61617?socket.verifyHostName=false
-      privateKeyPath: /etc/cloud/privateKey
+      privateKeyPath: /etc/cloud-server/privateKey
       browserFacingPort: 8083
       logLevel: DEBUG
 
       #            smtp server details for sending reset password links
       mail:
         smtp:
-          configFile: /var/cloud/smtp.json
+          configFile: /var/cloud-server/smtp.json
 
       quartz:
       autoStartup: false
 
     dataSource:
       dbCreate: update
-      url: jdbc:h2:/var/cloud/db/prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+      url: jdbc:h2:/var/cloud-server/db/prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     properties:
       jmxEnabled: true
       initialSize: 5
